@@ -35,31 +35,32 @@ opt: batteries.cmxa
 #batteries_layer_1.cma: batteries_layer_1.mllib
 #	ocamlbuild batteries_layer_1.cma
 
-batteries.cma: #batteries_layer_1.cma
+batteries.cma:
 	ocamlbuild batteries.cma
 
 #batteries_layer_1.cmxa: batteries_layer_1.mllib
 #	ocamlbuild batteries_layer_1.cmxa
 
-batteries.cmxa: #batteries_layer_1.cmxa
+batteries.cmxa:
 	ocamlbuild batteries.cmxa
 
-doc: doc/api.odocl .PHONY
+doc: doc/api.odocl
 	\rm -Rf doc/batteries/html/api &&\
 	ocamlbuild doc/api.docdir/index.html &&\
 	rm api.docdir &&\
 	mv _build/doc/api.docdir/ doc/batteries/html/api
 
-doc/api.odocl: batteries.mllib
-	cp batteries.mllib doc/api.odocl
+doc/api.odocl: list
+#	echo Batteries > doc/api.odocl
+	cat batteries.mllib > doc/api.odocl
 
 #
 #Generate the list of modules we intend to put into batlib.cma
 #
-list: batteries.mllib 
-batteries.mllib: 
+list: batteries.mllib
+batteries.mllib:
 	@echo $(basename $(notdir $(shell find src/ -name  "*.ml"))) > batteries.mllib &&\
-	sed -e "s/ /\n/g" -e "s/batlib/Batlib/g"   -i batteries.mllib                          
+	sed -e "s/ /\n/g" -e "s/batlib/Batlib/g"   -i batteries.mllib
 
 prepare_syntax_contents:
 	@echo $(basename $(notdir $(shell find syntax -name  "*.ml"))) > batsyntax.mllib &&\
@@ -70,8 +71,6 @@ META: build/META
 
 install: META
 	ocamlfind install batteries META $(shell find _build/ -name "batteries.cma" -o -name "batteries.cmxa" -o -name "batteries.cmi" -o -name "batteries.a") 
-#	ln -sf _build/src/layer_1/batlib_standard.cmi pervasives.cmi &&\
-#	ln -sf _build/src/layer_1/batlib_standard.cmo pervasives.cmo &&\
 
 
 uninstall:
@@ -82,5 +81,4 @@ clean:
 	\rm -f `find . -name "*~" -o -name "*#"` &&\
 	\rm -f META
 
-.PHONY:
-	
+.PHONY: batteries.mllib doc/api.odocl
