@@ -1,4 +1,50 @@
+enum
+lazyList
+extString
+extNativeint
+unzip
+extInt64
+extComplex
+global
+dynArray
+extInt
+uTF8
+std
+install
+result
+enumLabels
+extInt32
+extList
+extChar
+pMap
+vect
+lazyListLabels
+extGenlex
+optParse
+dllist
+bitSet
+extBool
+refList
+extRandom
+extLib
+file
+extArray
+ref
+charParser
+parserCo
+extStream
+rope
+extHashtbl
+extFloat
+number
+option
+base64
+uChar
+IO
+extBig_int
+labels
 Batlib_languages
+batteries
 Batlib_toolchain
 Batlib_text
 Batlib_concurrency
@@ -83,3 +129,4 @@ Batlib_Extlib_Base64
 Batlib_Extlib_Array
 Batlib_Extlib_Std
 Batlib_Findlib_Findlib
+Batlib_Misc_Labels
