@@ -3,7 +3,5 @@ version="0.1"
 description="Batteries Included, standard distribution of OCaml libraries"
 requires="num,bigarray,threads,extlib,str,findlib"
 
-archive(byte)  ="batteries_layer_1.cma  batteries.cma"
-archive(native)="batteries_layer_1.cmxa batteries.cmxa"
-preprocessor   ="pa_batteries_starter.cma"
-preprocessor(batteries)="pa_batteries_starter.cma"
+archive(byte)  ="batteries.cma"
+archive(native)="batteries.cmxa"
