@@ -3,6 +3,10 @@
 	* layer_1/*: moved to [main]
 	* Makefile: [api.odocl] now doesn't insert [Batteries]
 	* Makefile: removed references to [batteries_layer_1]
+	* glue/misc: created
+	* additions: created
+	* additions/extlib: created
+	* additions/misc: created
 	
 09/08/2008 David Teller <David.Teller@univ-orleans.fr>:
 	* batlib_findlib.ml:    removed
